--- a/weworkautotest/pom.xml
+++ b/weworkautotest/pom.xml
@@ -133,6 +133,11 @@
             <version>${selenium.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>4.0.0-rc-2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
